--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,3 @@
-server:
- port: 8080
-spring:
- profiles:
- active: prod 
----
- server:
-  port: 8081
- spring:
-  profiles: dev
----
- server:
-  port: 8083
-  profiles: prod
+schema:
+ - classpath:sql/department.sql
+ - classpath:sql/employee.sql
